[gd_scene load_steps=4 format=3 uid="uid://0g7fgd2qhqs6"]

[ext_resource type="PackedScene" uid="uid://ufb1hjutfhcv" path="res://Carpeta Cartas/Escena Selección/Eleccion_carta.tscn" id="1_85jaj"]
[ext_resource type="Script" path="res://Carpeta Cartas/Escena Selección/Eleccion_carta_final.gd" id="1_xxjao"]
[ext_resource type="Texture2D" uid="uid://cs1cfhl1i7fa7" path="res://icon.svg" id="2_u1ply"]

[node name="EleccionCartaFinal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxjao")

[node name="Panel" type="TextureRect" parent="."]
visible = false
light_mask = 524288
visibility_layer = 524288
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u1ply")

[node name="EleccionCarta" parent="." instance=ExtResource("1_85jaj")]
layout_mode = 1

[node name="AnimationScene" type="AnimationPlayer" parent="."]

[connection signal="selection_finished" from="EleccionCarta" to="." method="_on_eleccion_carta_selection_finished"]

[editable path="EleccionCarta"]
